Fix layout alignment and update color scheme

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #333333;
+    background-color: #17072b;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,23 +13,35 @@ h1,h4{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+
+
+.pagewrap {
+    width: 80%;
+    margin: 0 auto;
+}
+
+
+
+
+
+
 #array-container {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
     justify-content: center;
-    height: 350px;
+    height: 550px;
     padding: 5px;
     margin: 10px 0;
-    width: 80%;
-    background-color: #383f49;
+    width: 100%;
+    background-color: 		#172d67;
     border-radius: 10px;
 }
 
 button {
     margin: 5px;
     padding: 10px 20px;
-    background-color: #427ea3;
+    background-color: 	#8c15e9;
     color: white;
     border: none;
     cursor: pointer;
@@ -42,10 +54,10 @@ button {
     gap: 20px;
     align-items: flex-start;
     margin: 10px auto;
-    background-color: #383f49;
+    background-color: 	#172d67;
     border-radius: 10px;
     padding: 10px;
-    width: 80%;
+    width: 100%;
     justify-content: center;
     flex-wrap: wrap;
 }
